# research_rainfaill

./: .gitignore  flake.nix  pyproject.toml
python/: cell_coast.json  cell_elevation.json  elevation_plot.py  fetch_coastline.py  plot_cells.py  plot_coastline.py  plot_density.py  plot_elevation_cells.py
terrain/: fetch_elevation.py  index.html  script.js  style.css
