[project]
name = "dublin-rainfall"
version = "0.1.0"
description = "Spatial rainfall forecasting in Dublin building on BU-LSTM-Attention"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "xarray",
    "netcdf4",
    "jupyter",
    "ipython",
    "shap",
    "xgboost",
    "tensorflow",
    # swap the line above for "torch" if the original paper uses PyTorch
]