[project]
name = "dublin-rainfall"
version = "0.1.0"
description = "Spatial rainfall forecasting in Dublin building on BU-LSTM-Attention"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy<2",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "xarray",
    "netcdf4",
    "jupyter",
    "ipython",
    "shap",
    "xgboost",
    "tensorflow>=2.15,<2.16",
    "tqdm",
    "joblib",
]